@@ -9,7 +9,6 @@ import static org.mockito.Mockito.verify;
 import com.pickyfy.pickyfy.domain.Magazine;
 import com.pickyfy.pickyfy.repository.MagazineRepository;
 import com.pickyfy.pickyfy.web.dto.request.MagazineCreateRequest;
-import com.pickyfy.pickyfy.web.dto.request.MagazineUpdateRequest;
 import com.pickyfy.pickyfy.web.dto.response.MagazineResponse;
 import jakarta.persistence.EntityNotFoundException;
 import java.lang.reflect.Field;
@@ -21,12 +20,17 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.web.multipart.MultipartFile;
 
 @ExtendWith(MockitoExtension.class)
 class MagazineServiceImplTest {
 
     @Mock
     private MagazineRepository magazineRepository;
+
+    @Mock
+    private S3Service s3Service;
 
     @InjectMocks
     private MagazineServiceImpl magazineService;
@@ -38,7 +42,6 @@ class MagazineServiceImplTest {
         magazine = Magazine.builder()
                 .title("테스트 매거진")
                 .iconUrl("test-icon.png")
-                .content("테스트 내용입니다.")
                 .build();
 
         // Reflection을 사용해 id 설정
@@ -50,11 +53,19 @@ class MagazineServiceImplTest {
     @Test
     void createMagazine_Success() {
         // Given
+        // MockMultipartFile 생성 - 실제 파일 처리는 하지 않고 테스트용 객체만 생성
+        MultipartFile mockFile = new MockMultipartFile(
+                "iconFile",           // 폼 필드 이름
+                "test-icon.png",      // 원본 파일 이름
+                "image/png",          // 컨텐트 타입
+                "test".getBytes()     // 간단한 테스트 데이터
+        );
+
         MagazineCreateRequest request = new MagazineCreateRequest(
                 "테스트 매거진",
-                "test-icon.png",
-                "테스트 내용입니다."
+                mockFile
         );
+
         given(magazineRepository.save(any(Magazine.class))).willReturn(magazine);
 
         // When
@@ -77,7 +88,6 @@ class MagazineServiceImplTest {
         assertThat(response.id()).isEqualTo(1L);
         assertThat(response.title()).isEqualTo("테스트 매거진");
         assertThat(response.iconUrl()).isEqualTo("test-icon.png");
-        assertThat(response.content()).isEqualTo("테스트 내용입니다.");
     }
 
     @Test
@@ -102,47 +112,12 @@ class MagazineServiceImplTest {
 
         // Then
         assertThat(responses).hasSize(1);
-        MagazineResponse response = responses.get(0);
+        MagazineResponse response = responses.getFirst();
         assertThat(response.id()).isEqualTo(1L);
         assertThat(response.title()).isEqualTo("테스트 매거진");
         assertThat(response.iconUrl()).isEqualTo("test-icon.png");
-        assertThat(response.content()).isEqualTo("테스트 내용입니다.");
     }
 
-    @Test
-    void updateMagazine_Success() {
-        // Given
-        MagazineUpdateRequest request = new MagazineUpdateRequest(
-                "수정된 매거진",
-                "updated-icon.png",
-                "수정된 내용입니다."
-        );
-        given(magazineRepository.findById(1L)).willReturn(Optional.of(magazine));
-
-        // When
-        magazineService.updateMagazine(1L, request);
-
-        // Then
-        assertThat(magazine.getTitle()).isEqualTo("수정된 매거진");
-        assertThat(magazine.getIconUrl()).isEqualTo("updated-icon.png");
-        assertThat(magazine.getContent()).isEqualTo("수정된 내용입니다.");
-    }
-
-    @Test
-    void updateMagazine_NotFound_ThrowsException() {
-        // Given
-        MagazineUpdateRequest request = new MagazineUpdateRequest(
-                "수정된 매거진",
-                "updated-icon.png",
-                "수정된 내용입니다."
-        );
-        given(magazineRepository.findById(1L)).willReturn(Optional.empty());
-
-        // When/Then
-        assertThatThrownBy(() -> magazineService.updateMagazine(1L, request))
-                .isInstanceOf(EntityNotFoundException.class)
-                .hasMessageContaining(String.valueOf(1L));
-    }
 
     @Test
     void deleteMagazine_Success() {
